--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,16 @@
 {
   "version": 2,
+  "env": {},
   "builds": [
     {
-      "src": "server/index.ts",
+      "src": "server/**/*.ts",
       "use": "@vercel/node"
-    },
-    {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": { "distDir": "dist" }
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "server/index.ts"
-    },
-    {
       "src": "/(.*)",
-      "dest": "client/index.html"
+      "dest": "server/index.ts"
     }
-  ],
-  "env": {
-    "DATABASE_URL": "@database_url"
-  }
+  ]
 }
