--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,18 @@
   "env": {},
   "builds": [
     {
-      "src": "server/**/*.ts",
+      "src": "api/index.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "api/index.ts"
+    },
+    {
       "src": "/(.*)",
-      "dest": "server/index.ts"
+      "dest": "api/index.ts"
     }
   ]
 }
