fix: update server configuration for serverless environment

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
   "version": 2,
-  "env": {},
+  "env": {
+    "NODE_ENV": "production"
+  },
   "builds": [
     {
       "src": "api/index.ts",
